[package]
name = "cpubars"
version = "0.2.2-alpha.0"
authors = ["Douglas Campos"]
description = "shows cpu utilization by core in bars"
homepage = "https://github.com/qmx/cpubars"
repository = "https://github.com/qmx/cpubars"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
failure = "0.1.5"
clap = "2.33.0"
