[package]
name = "cpubars"
version = "0.4.3"
authors = ["Douglas Campos"]
description = "shows cpu utilization by core in bars"
homepage = "https://github.com/qmx/cpubars"
repository = "https://github.com/qmx/cpubars"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
anyhow = "1.0.26"
psutil = "3.0.1"
